service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: argo-dev-app1
spec:
  selector:
    app: hello-world
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
  type: ClusterIP
